Preparing the link between Config, Background and front application

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "name": "Eureka!",
     "description": "To remember all good ideas and duties!",
     "version": "0.1",
+    "options_page": "options/index.html",
     "background": {
         "service_worker": "background.js"
     },
